<resources>
    <string name="app_name">Đặt vé xe khách</string>
    <string name="facebook_app_id">529620640556271</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="opendrawer">Open</string>
    <string name="closedrawer">Close</string>
    <string name="navigation_view_item_0">Nhà Xe</string>
    <string name="navigation_view_item_1">Tìm Chuyến</string>
    <string name="navigation_view_item_2">Xem Vé</string>
    <string name="navigation_view_item_3">Hướng Dẫn</string>
    <string name="navigation_view_item_4">Liên Hệ</string>
    <string name="navigation_view_item_5">About</string>
    <string name="navigation_view_item_6">Mã xác nhận</string>
    <string name="navigation_view_category_1">Navigation View Category</string>
    <string name="navigation_view_category_2">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="A1D">A1D</string>
    <string name="B1D">B1D</string>
    <string name="C1D">C1D</string>
    <string name="D1D">D1D</string>
    <string name="A2D">A2D</string>
    <string name="B2D">B2D</string>
    <string name="C2D">C2D</string>
    <string name="D2D">D2D</string>
    <string name="A3D">A3D</string>
    <string name="B3D">B3D</string>
    <string name="C3D">C3D</string>
    <string name="D3D">D3D</string>
    <string name="A4D">A4D</string>
    <string name="B4D">B4D</string>
    <string name="C4D">C4D</string>
    <string name="D4D">D4D</string>
    <string name="A5D">A5D</string>
    <string name="B5D">B5D</string>
    <string name="C5D">C5D</string>
    <string name="D5D">D5D</string>

    <string name="A1T">A1T</string>
    <string name="B1T">B1T</string>
    <string name="C1T">C1T</string>
    <string name="D1T">D1T</string>
    <string name="A2T">A2T</string>
    <string name="B2T">B2T</string>
    <string name="C2T">C2T</string>
    <string name="D2T">D2T</string>
    <string name="A3T">A3T</string>
    <string name="B3T">B3T</string>
    <string name="C3T">C3T</string>
    <string name="D3T">D3T</string>
    <string name="A4T">A4T</string>
    <string name="B4T">B4T</string>
    <string name="C4T">C4T</string>
    <string name="D4T">D4T</string>
    <string name="A5T">A5T</string>
    <string name="B5T">B5T</string>
    <string name="C5T">C5T</string>
    <string name="D5T">D5T</string>

    <!-- Lien he -->
    <string name="lienhe">
        Xin chào các bạn!\n
        Mọi vấn đề thắc mắc cần xin hệ nhà xe bằng số điện thoại hay email của nhà xe.\n
        Hoặc liên hệ trực tiếp với nhóm lập trình SaiGonStars:\n
        Địa chỉ : ktx khu B - Đại học quốc gia Hồ Chí Minh.\n
        Số điện thoại : 0978055271\n
        Thông tin nhóm SaiGonStars:\n
        Trịnh Đình Tiến : tientd.9x@gmail.com\n
        Lê Hồng Thái    : 12520385@gm.uit.edu.vn\n
        Vũ Văn Thắng    : vuvanthanguit@gmail.com\n
    </string>


    <!-- list title -->

    <string name="title1">Tôi muốn đặt vé thì làm như thế nào?</string>
    <string name="title2">Làm sao để xem và quản lý được vé của tôi đã đặt?</string>
    <string name="title3">Khi đi xe, làm sao để tôi xác nhận với nhà xe về vé của tôi?</string>
    <string name="title4">Một người có thể đại diện đặt vé cho nhiều người được không?</string>
    <string name="title5">Vé của tôi có được đảm bảo không bị hủy ngang hay mất ghế hoặc mất thông tin cá nhân không?</string>


    <!-- list content -->

    <string name="content1">
        Khi bạn muốn đặt vé, trước tiên phải lựa chọn chuyến xe bạn muốn đi dựa trên tuyến chạy và ngày khỏi hành.\n
        Khi danh sách các chuyến hiện lên, bạn chọn chuyến mong muốn và chọn nút "Chọn" để đến sơ đồ ghế của
        xe. Bạn click một cái là chọn ghế, click cái thứ hai là bỏ chọn ghế, bạn chỉ được đặt tối đa 2 ghế. Sau khi chọn
        ghế xong chọn nút "Chọn ghế" ghế để nhập thông tin cá nhân hành khách, sau khi nhập xong bạn cần thực hiện bước xác nhận,
        khi xác nhận xong là bạn đã đặt vé thành công.\n
        Sau khi hiện thông báo thành công. Sẽ xuất hiện một mã QR Code. Mã này dùng để xác nhận với nhà xe khi bạn đến thanh toán vé.
    </string>
    <string name="content2">
        Khi đã đặt vé thì bạn vào phần xem vé, nhập số điện thoại và số chứng minh nhân dân mà bạn đã nhập khi đặt vé.
        Trong đó có  tất cả thông tin cá nhân bạn đã cung cấp và thông tin vé bạn đã đặt. Bạn có thể thao tác trên vé
        của mình như : sửa vé, đổi vé, hủy vé.
    </string>
    <string name="content3">
        Khi bạn đặt vé thì nhà xe đã cung cấp cho bạn một mã vé dưới dạng mã QR Code được lưu trong phần \"Mã xác nhận\",
        bạn sẽ dùng mã vé này để xác nhận với nhà xe trước khi
        lên xe khởi hành.
    </string>
    <string name="content4">
        Một người có thể đại diện đặt vé cho tối đa 2 người, và bạn chỉ được cung cấp 1 mã vé để xác nhận chung cho 2 vé
        của bạn.
    </string>
    <string name="content5">
        Hoàn toàn không bạn nhé!\n
        Vé của bạn hoàn toàn được bảo mật an toàn thông tin cá nhân của bạn và sẽ không có việc vé của bạn bị hủy, mất
        hay cho người khác sử dụng khi bạn đã đặt.
    </string>
</resources>
