<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_item_0"
            android:checked="true"
            android:icon="@drawable/bus"
            android:title="@string/navigation_view_item_0" />
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/search"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/viewticket"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/navigation_item_6"
            android:icon="@drawable/qrcode"
            android:title="@string/navigation_view_item_6" />
    </group>

    <item
        android:id="@+id/navigation_view_category_2"
        android:title="@string/navigation_view_category_2">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/navigation_item_3"
                    android:icon="@drawable/guide"
                    android:title="@string/navigation_view_item_3" />
                <item
                    android:id="@+id/navigation_item_4"
                    android:icon="@drawable/phones"
                    android:title="@string/navigation_view_item_4" />
                <item
                    android:id="@+id/navigation_item_5"
                    android:icon="@drawable/about"
                    android:title="@string/navigation_view_item_5" />
            </group>
        </menu>
    </item>


</menu>