<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EDF5FA">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghedangchon"
                android:layout_column="2"/>
            <Button
                android:id="@+id/btnChonGheTang1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chọn Ghế"/>

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="C"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFE70909"
                android:layout_column="1"
                android:gravity="center"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="B"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFE70909"
                android:layout_column="3"
                android:gravity="center"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="A"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFE70909"
                android:layout_column="5"
                android:gravity="center"/>

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >

            <ImageView
                android:tag="@string/C1D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong1"
                android:layout_column="1"
                android:id="@+id/C1D" />
            <ImageView
                android:tag="@string/B1D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong1"
                android:layout_column="3"
                android:id="@+id/B1D" />
            <ImageView
                android:tag="@string/A1D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong1"
                android:layout_column="5"
                android:id="@+id/A1D" />

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:tag="@string/C2D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong2"
                android:layout_column="1"
                android:id="@+id/C2D" />
            <ImageView
                android:tag="@string/B2D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong2"
                android:layout_column="3"
                android:id="@+id/B2D" />
            <ImageView
                android:tag="@string/A2D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong2"
                android:layout_column="5"
                android:id="@+id/A2D" />

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:tag="@string/C3D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong3"
                android:layout_column="1"
                android:id="@+id/C3D" />
            <ImageView
                android:tag="@string/B3D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong3"
                android:layout_column="3"
                android:id="@+id/B3D" />
            <ImageView
                android:tag="@string/A3D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong3"
                android:layout_column="5"
                android:id="@+id/A3D" />

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:tag="@string/C4D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong4"
                android:layout_column="1"
                android:id="@+id/C4D" />
            <ImageView
                android:tag="@string/B4D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong4"
                android:layout_column="3"
                android:id="@+id/B4D" />
            <ImageView
                android:tag="@string/A4D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong4"
                android:layout_column="5"
                android:id="@+id/A4D" />

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:tag="@string/C5D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong5"
                android:layout_column="1"
                android:id="@+id/C5D" />
            <ImageView
                android:tag="@string/B5D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong5"
                android:layout_column="3"
                android:id="@+id/B5D" />
            <ImageView
                android:tag="@string/A5D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong5"
                android:layout_column="5"
                android:id="@+id/A5D" />

        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="D"
                android:textColor="#FFE70909"
                android:layout_column="0" />

            <ImageView
                android:tag="@string/D1D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong1"
                android:layout_column="1"
                android:id="@+id/D1D" />
            <ImageView
                android:tag="@string/D2D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong2"
                android:layout_column="2"
                android:id="@+id/D2D" />
            <ImageView
                android:tag="@string/D3D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong3"
                android:layout_column="3"
                android:id="@+id/D3D" />
            <ImageView
                android:tag="@string/D4D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong4"
                android:layout_column="4"
                android:id="@+id/D4D" />
            <ImageView
                android:tag="@string/D5D"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ghetrong5"
                android:layout_column="5"
                android:id="@+id/D5D" />

        </TableRow>

    </TableLayout>


    <!--<LinearLayout-->
        <!--android:gravity="center"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<Button-->
            <!--android:id="@+id/btnChonGheTang1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Chọn Ghế"/>-->

    <!--</LinearLayout>-->



</LinearLayout>