<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="#EDF5FA">

    <LinearLayout
        android:id="@+id/layout_error"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:text="Lỗi kết nối. Vui lòng thử lại!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnTryAgain"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAllCaps="false"
            android:textColor="@color/fragment_sodoghe_tang1_text_color"
            android:background="@drawable/rect_button"
            android:text="Thử lại"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/layout_sodoghe2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_marginRight="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghedangchon"
                        android:layout_column="1"/>

                    <ImageView
                        android:layout_marginRight="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_column="3"/>
                    <ImageView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_column="5"/>

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:id="@+id/fragment_sodoghe_tang2_C"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="C"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:textColor="@color/fragment_sodoghe_tang1_text_day_color"
                        android:layout_column="1"
                        android:gravity="center"/>
                    <TextView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:id="@+id/fragment_sodoghe_tang2_B"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="B"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:textColor="@color/fragment_sodoghe_tang1_text_day_color"
                        android:layout_column="3"
                        android:gravity="center"/>
                    <TextView
                        android:layout_marginTop="@dimen/distance_small"
                        android:id="@+id/fragment_sodoghe_tang2_A"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="A"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:textColor="@color/fragment_sodoghe_tang1_text_day_color"
                        android:layout_column="5"
                        android:gravity="center"/>

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    >

                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/C1T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong1"
                        android:layout_column="1"
                        android:id="@+id/C1T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/B1T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong1"
                        android:layout_column="3"
                        android:id="@+id/B1T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:tag="@string/A1T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong1"
                        android:layout_column="5"
                        android:id="@+id/A1T" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/C2T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong2"
                        android:layout_column="1"
                        android:id="@+id/C2T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/B2T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong2"
                        android:layout_column="3"
                        android:id="@+id/B2T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:tag="@string/A2T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong2"
                        android:layout_column="5"
                        android:id="@+id/A2T" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/C3T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong3"
                        android:layout_column="1"
                        android:id="@+id/C3T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/B3T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong3"
                        android:layout_column="3"
                        android:id="@+id/B3T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:tag="@string/A3T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong3"
                        android:layout_column="5"
                        android:id="@+id/A3T" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/C4T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong4"
                        android:layout_column="1"
                        android:id="@+id/C4T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/B4T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong4"
                        android:layout_column="3"
                        android:id="@+id/B4T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:tag="@string/A4T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong4"
                        android:layout_column="5"
                        android:id="@+id/A4T" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/C5T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong5"
                        android:layout_column="1"
                        android:id="@+id/C5T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/B5T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong5"
                        android:layout_column="3"
                        android:id="@+id/B5T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:tag="@string/A5T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong5"
                        android:layout_column="5"
                        android:id="@+id/A5T" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="D"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:textColor="@color/fragment_sodoghe_tang1_text_day_color"
                        android:layout_column="0" />

                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/D1T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong1"
                        android:layout_column="1"
                        android:id="@+id/D1T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/D2T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong2"
                        android:layout_column="2"
                        android:id="@+id/D2T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/D3T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong3"
                        android:layout_column="3"
                        android:id="@+id/D3T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:layout_marginRight="10dp"
                        android:tag="@string/D4T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong4"
                        android:layout_column="4"
                        android:id="@+id/D4T" />
                    <ImageView
                        android:layout_marginTop="@dimen/distance_small"
                        android:tag="@string/D5T"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ghetrong5"
                        android:layout_column="5"
                        android:id="@+id/D5T" />

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
